--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wayne's World Party Time</title>
-    <link rel="stylesheet" href="styles.css?v=1.02">
+    <link rel="stylesheet" href="styles.css?v=1.03">
     <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
 <body>
     <div class="background">
         <div class="logo-container">
-            <a href="https://www.google.com" target="_blank">
+            <a href="https://www.google.com">
                 <img src="assets/logo.png" alt="Logo" class="logo">
             </a>
         </div>
