--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <ul class="nav-list">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="background">
         <div class="logo-container">
             <a href="https://www.waynespartytime.com">
