Menu Bar Color + Instagram link redirect

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="text-container">
             <div class="text-row">
                 <img src="assets/ig_icon.png" alt="Icon 1" class="icon">
-                 <a href="https://www.instagram.com/waynesworldpartytimeinc/" class="text-link">Our Instagram</a>
+                 <a href="https://www.instagram.com/waynesworldpartytimeinc/" target="_blank" class="text-link">Our Instagram</a>
             </div>
             <div class="text-row">
                 <img src="assets/phone_icon.png" alt="Icon 2" class="icon">
