--- a/services.html
+++ b/services.html
@@ -20,19 +20,9 @@
     </header>
     <div class="background">
         <div class="logo-container">
-            <a href="https://www.waynespartytime.com">
+            <a href="index.html">
                 <img src="assets/logo.png" alt="Logo" class="logo">
             </a>
-        </div>
-        <div class="text-container">
-            <div class="text-row">
-                <img src="assets/ig_icon.png" alt="Icon 1" class="icon">
-                 <a href="https://www.instagram.com/waynesworldpartytimeinc/" target="_blank" class="text-link">Our Instagram</a>
-            </div>
-            <div class="text-row">
-                <img src="assets/phone_icon.png" alt="Icon 2" class="icon">
-                <p>+1 (800) 941-4033</p>
-            </div>
         </div>
     </div>
 </body>
