--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     </header>
     <div class="background">
         <div class="logo-container">
-            <a href="https://www.waynespartytime.com">
+            <a href="index.html">
                 <img src="assets/logo.png" alt="Logo" class="logo">
             </a>
         </div>
