about section work

--- a/about.html
+++ b/about.html
@@ -24,6 +24,9 @@
                 <img src="assets/logo.png" alt="Logo" class="logo">
             </a>
         </div>
+		<div class="subpage-text">
+                <p>This text only appears on the subpage.</p>
+        </div>
     </div>
 </body>
 </html>
