--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wayne's World Party Time</title>
+    <title>Wayne's World Party Time - About Us</title>
     <link rel="stylesheet" href="styles.css?v=1.05">
     <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
@@ -18,16 +18,26 @@
             </ul>
         </nav>
     </header>
+
     <div class="background">
         <div class="logo-container">
             <a href="index.html">
-                <img src="assets/logo.png" alt="Logo" class="logo">
+                <img src="assets/logo.png" alt="Wayne's World Logo" class="logo">
             </a>
         </div>
-		<div class="subpage-text">
-
-                <p>Welcome to Wayne's World Party Time, your one-stop solution for unforgettable events in the Long Island area! We specialize in providing top-quality party rentals, including chairs, tents, and tables, for any occasion. We offer a wide range of exciting options like bounce houses, clowns, magicians, and more, ensuring that your event is filled with fun and entertainment. Whether you're planning a birthday party, corporate event, or any other celebration, our dedicated team is here to help you create memories that will last a lifetime. Let us bring the party to you and make your event truly spectacular!</p>
-       </div>
+        
+        <div class="subpage-text">
+            <h1>About Us</h1>
+            <p class="intro-text">
+                Wayne's World Party Time is your one-stop solution for unforgettable events in the Long Island area!
+            </p>
+            <p>
+                We specialize in providing top-quality party rentals, including chairs, tents, and tables, for any occasion. We offer a wide range of exciting options like bounce houses, clowns, magicians, and more, ensuring that your event is filled with fun and entertainment.
+            </p>
+            <p>
+                Whether you're planning a birthday party, corporate event, or any other celebration, our dedicated team is here to help you create memories that will last a lifetime. Let us bring the party to you and make your event truly spectacular!
+            </p>
+        </div>
     </div>
 </body>
 </html>
