--- a/index.html
+++ b/index.html
@@ -6,16 +6,24 @@
     <title>Wayne's World Party Time</title>
     <link rel="stylesheet" href="styles.css?v=1.06">
     <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
+    <style>
+        .under-construction {
+            color: white;
+            font-weight: bold;
+            font-size: 28px;
+            text-align: center;
+            padding: 20px 0;
+        }
+        .navbar {
+            background-color: #e51937;
+            font-size: 28px;
+        }
+    </style>
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <ul class="nav-list">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
+            <div class="under-construction">Under Construction 🔨</div>
         </nav>
     </header>
     <div class="background">
