Adjusted Notice Font-Size.html

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         }
         .navbar {
             background-color: #e51937;
-            font-size: 28px;
+            font-size: 13px;
         }
     </style>
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <div class="under-construction">Under Construction 🔨</div>
+            <div class="under-construction">Site Under Construction 🔨</div>
         </nav>
     </header>
     <div class="background">
