--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wayne's World Party Time</title>
-    <link rel="stylesheet" href="styles.css?v=1.09">
+    <link rel="stylesheet" href="styles.css?v=1.11">
     <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
     <style>
         .under-construction {
@@ -49,10 +49,74 @@
                 <a href="tel:+18009414033" class="text-link">+1 (800) 941-4033</a>
             </div>
             <div class="cta-button-container">
-                <a href="mailto:twaynewizzo@gmail.com" class="cta-button">Contact Us</a>
-            </div>
+				<a href="mailto:twaynewizzo@gmail.com" class="cta-button">Contact Us</a>
+			</div>
+			<div class="cta-button-container">
+				<button type="button" class="cta-button" onclick="toggleGallery()">Photo Gallery</button>
+			</div>
         </div>
     </div>
+<!-- Photo Gallery Section -->
+<div id="gallery" class="gallery">
+    <div class="gallery-categories">
+        <button onclick="filterGallery('all')">All</button>
+        <button onclick="filterGallery('tents')">Tents</button>
+        <button onclick="filterGallery('tables')">Tables & Chairs</button>
+        <button onclick="filterGallery('inflatables')">Inflatables</button>
+        <button onclick="filterGallery('concessions')">Concessions</button>
+    </div>
+    <div class="gallery-grid">
+        <!-- Example images, assign data-category attributes -->
+        <div class="gallery-item" data-category="tents" onclick="openLightbox('assets/photo1.jpg')">
+            <img src="assets/photo1_thumb.jpg" alt="Tents">
+        </div>
+        <div class="gallery-item" data-category="tables" onclick="openLightbox('assets/photo2.jpg')">
+            <img src="assets/photo2_thumb.jpg" alt="Tables & Chairs">
+        </div>
+        <div class="gallery-item" data-category="inflatables" onclick="openLightbox('assets/photo3.jpg')">
+            <img src="assets/photo3_thumb.jpg" alt="Inflatables">
+        </div>
+        <div class="gallery-item" data-category="concessions" onclick="openLightbox('assets/photo4.jpg')">
+            <img src="assets/photo4_thumb.jpg" alt="Concessions">
+        </div>
+    </div>
+</div>
+
+<!-- Lightbox -->
+<div id="lightbox" class="lightbox" onclick="closeLightbox()">
+    <img id="lightbox-img" src="" alt="">
+</div>
+
+<script>
+    function toggleGallery() {
+        const gallery = document.getElementById('gallery');
+        gallery.classList.toggle('show');
+        if (gallery.classList.contains('show')) {
+            gallery.scrollIntoView({ behavior: 'smooth' });
+        }
+    }
+
+    function openLightbox(src) {
+        document.getElementById('lightbox-img').src = src;
+        document.getElementById('lightbox').classList.add('show');
+    }
+
+    function closeLightbox() {
+        document.getElementById('lightbox').classList.remove('show');
+    }
+
+    function filterGallery(category) {
+        const items = document.querySelectorAll('.gallery-item');
+        items.forEach(item => {
+            if (category === 'all' || item.dataset.category === category) {
+                item.style.display = 'block';
+            } else {
+                item.style.display = 'none';
+            }
+        });
+    }
+</script>
+
     <footer class="footer">
         © 2025 Wayne's World Party Time, Inc.
     </footer>
