--- a/index.html
+++ b/index.html
@@ -85,12 +85,21 @@
                 <img src="assets/photo2_thumb.jpg" alt="Tables & Chairs">
             </div>
             <!-- Inflatables -->
-            <div class="gallery-item" data-category="inflatables" onclick="openLightbox('assets/photo3.jpg')">
-                <img src="assets/photo3_thumb.jpg" alt="Inflatables">
+            <div class="gallery-item" data-category="inflatables" onclick="openLightbox('assets/patriot_bounce.jpg')">
+                <img src="assets/patriot_thumb.jpg" alt="Inflatables">
+            </div>
+            <div class="gallery-item" data-category="inflatables" onclick="openLightbox('assets/football_bounce.jpg')">
+                <img src="assets/football_thumb.jpg" alt="Inflatables">
+            </div>
+            <div class="gallery-item" data-category="inflatables" onclick="openLightbox('assets/firehouse_bounce.jpg')">
+                <img src="assets/firehouse_thumb.jpg" alt="Inflatables">
             </div>
             <!-- Concessions -->
-            <div class="gallery-item" data-category="concessions" onclick="openLightbox('assets/photo4.jpg')">
-                <img src="assets/photo4_thumb.jpg" alt="Concessions">
+            <div class="gallery-item" data-category="concessions" onclick="openLightbox('assets/hotdog_cart.jpg')">
+                <img src="assets/hotdog_thumb.jpg" alt="Concessions">
+            </div>
+            <div class="gallery-item" data-category="concessions" onclick="openLightbox('assets/pretzel.jpg')">
+                <img src="assets/pretzel_thumb.jpg" alt="Concessions">
             </div>
         </div>
     </div>
